# ml-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ai-embodiment/: .gitignore  pyproject.toml
ai-embodiment/src/ai-embodiment/: actions.py  loop.py
ai-embodiment/src/ai_embodiment/: agents.py  cli.py  sensors.py
archive/generative/: llm_client.py
archive/model/: torch_model.py
data-pipeline/: README.md  pyproject.toml
data-pipeline/src/data_pipeline/: __init__.py  config.py  io.py  registry.py
data-pipeline/src/pipeline/: __init__.py  config.py  io.py  registry.py  runner.py
data-pipeline/tests/: conftest.py  test_io_csv_roundtrip.py  test_pipeline_run.py  test_registry.py
gen-ai/: README.md  llm_helpers.py  pyproject.toml  settings.py
gen-ai/src/: llm_helpers.py
memory-layer/: pyproject.toml
memory-layer/notebooks/: test.ipynb
memory-layer/src/: memory.py
memory-layer/src/memory_layer/: __init__.py  memory.py
ml_toolkit/: __init__.py
ml_toolkit/utils/: __init__.py  logging.py
notebooks/mem0/: mem0_migration.ipynb
quiz-generator/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
quiz-generator/notebooks/: quiz.ipynb
quiz-generator/src/: model.py  quiz_generator.py
quiz-generator/src/quiz_generator/: agent.py  cli.py  llm_helpers.py  logging_config.py  orchestrator.py  settings.py  tools.py
quiz-generator/src/quiz_generator/quiz/: generator.py  planner.py
quiz-generator/tests/: test_models.py
src/generative/: llm_client.py  llm_helpers.py  settings.py
src/generative/clients/: __init__.py  base.py  mock.py  structured.py
src/ml_toolkit/ai_embodiment/: README.md  __init__.py  communication.py
src/ml_toolkit/data_pipeline/: README.md  __init__.py  __main__.py  config.py  io.py  registry.py  types.py
src/ml_toolkit/gen_ai/: README.md  __init__.py  llm_helpers.py
src/ml_toolkit/memory_layer/: README.md
src/ml_toolkit/prompts/agents/: utility.agent.md
src/ml_toolkit/prompts/instructions/: chatgpt-instructions.md  chatgpt-mem0.instructions.md  chatgpt.instructions.md  copilot.instructions.md  mem0.instructions.md
src/ml_toolkit/prompts/prompts/: debrief.prompt.md
src/ml_toolkit/quiz_generator/: README.md  agent.py  ingestor.py  logging_config.py  orchestrator.py  tools.py
src/ml_toolkit/quiz_generator/quiz/: generator.py  models.py  planner.py
src/ml_toolkit/utils/: callbacks.py
src/model/: base.py
src/tuner/: base.py
src/utils/: logging.py
tests/data_pipeline/: conftest.py  test_io_csv_roundtrip.py  test_pipeline_run.py  test_registry.py
tests/quiz_generator/: test_models.py
