[project]
name = "ml-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "instructor>=1.11.3",
    "mistralai>=1.9.11",
    "numpy>=2.3.3",
    "openai>=1.108.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytorch-lightning>=2.5.5",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
